--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,58 +1,36 @@
 {% extends 'registration/base.html' %}
 
-{% load static widget_tweaks %}
+{% load static widget_tweaks crispy_forms_tags %}
 
 {% block content %}
-
-<div class="row mt-4">
-    <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
-        <h2 class="text-center mb-4 login-head">Login Form</h2>
-        <form method="POST" class="text-left">
-            {% csrf_token %}
-            {{form.non_field_errors}}
-
-            <div class="mb-3">
-                <label class="form-label">Phone</label>
-                {{form.username.errors}}
-                {{form.username|add_class:"form-control border border-primary"|attr:"placeholder:Phone"}}
-
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Password</label>
-                {{form.password.errors}}
-                {{form.password|add_class:"form-control border border-primary"|attr:"placeholder:Password"}}
-                <!-- <input type="text" name="password" class="form-control border border-primary" required> -->
-            </div>
-            <p class="small"><a class="text-primary" href="{% url 'auth_password_reset' %}">Forgot password?</a>
-            </p>
-            <div class="d-grid">
-                <button class="btn btn-login" type="submit">Login</button>
-            </div>
-        </form>
-        <!-- {% if messages %}
-        <div class="messages login-message">
-            {% for message in messages %}
-            <div {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-                {{ message }}
-            </div>
-            {% endfor %}
+<div class="row">
+    <div class="col-md-6 mx-auto">
+        <div class="wrapper mt-4">
+            <form class="form-right" method="POST" action="">
+                <h2 class="text-uppercase">USK Agent Login</h2>
+                <div class="row text-left">
+                    {% csrf_token %}
+                    {{form|crispy}}
+                    <p class="small"><a class="text-primary" href="{% url 'auth_password_reset' %}">Forgot password?</a>
+                    </p>
+                    <div class="d-grid">
+                        <button class="btn btn-login" type="submit">Login</button>
+                    </div>
+                    <div class="mt-3">
+                        <p class="mb-0  text-center">
+                            Don't have an account?
+                            <a href="{% url 'web:register' %}" class="text-primary fw-bold">Sign Up</a>
+                        </p>
+                    </div>
+                
+                    <a href="#" target="_blank" class="learnmore-button">
+                        LEARN MORE
+                    </a>
+                </div>
+            </form>
         </div>
-        {% endif %} -->
-        <div class="mt-3">
-            <p class="mb-0  text-center">Don't have an account? <a href="{% url 'web:register' %}"
-                    class="text-primary fw-bold">Sign
-                    Up</a></p>
-        </div>
-
-
-        <div class="learnmore-button">
-            <span>LEARN MORE</span>
-        </div>
+        
     </div>
 </div>
-
-<a href="https://wa.me/919895676161" class="whats-link">
-    <img src="{% static 'web/images/whatsapp.png' %}" class="whatsapp-icon"> </a>
 
 {% endblock %}
