--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,14 +1,11 @@
-{% extends 'registration/base.html' %}
-{% load static i18n crispy_forms_tags %}
+{% extends "registration/registration_base.html" %}
+{% load i18n  crispy_forms_tags %}
+
+{% block title %}{% trans "Password changed" %}{% endblock %}
 
 {% block content %}
-
-                <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
-                  <div class="row text-center">
-                    <h4 class="text-center">{% trans "Password successfully changed!" %}</h4>
-                  </div>
-                  <div class="text-center">
-                      <a href="{% url 'auth_login' %}" class="rt_btn_color_border">Login Again</a>
-                  </div>
-                </div>
+<p>{% trans "Password successfully changed!" %}</p>
 {% endblock %}
+
+
+{# This is used by django.contrib.auth #}
