--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,20 +1,15 @@
-{% extends 'registration/base.html' %}
-{% load static i18n crispy_forms_tags %}
-{% load static widget_tweaks %}
+{% extends "registration/registration_base.html" %}
+{% load i18n  crispy_forms_tags %}
 
 {% block title %}{% trans "Change password" %}{% endblock %}
 
 {% block content %}
-
-                    <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
-                      <div class="row text-center">
-                        <form method="post" action="">
-                            {% csrf_token %}
-                            {{ form|crispy}}
-                            <input type="submit" class="btn btn-login" value="{% trans 'Change password' %}" />
-                        </form>
-                      </div>
-                    </div>
-
-
+<form method="post" action="">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input type="submit" value="{% trans 'Change password' %}" />
+</form>
 {% endblock %}
+
+
+{# This is used by django.contrib.auth #}
