--- a/templates/web/register.html
+++ b/templates/web/register.html
@@ -1,82 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'registration/registration_base.html' %}
+{% load static widget_tweaks crispy_forms_tags %}
+{% block content %}
 
-<head>
-    {% load static crispy_forms_tags %}
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>USKLOGIN.COM</title>
-    <link rel="stylesheet" href="{% static 'web/vendors/mdi/css/materialdesignicons.min.css' %}">
-    <link rel="stylesheet" href="{% static 'web/vendors/css/vendor.bundle.base.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
-    <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
-    <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-</head>
-
-<body style="background-color:#f2edf3;">
-
-    <div class="container">
-
-        <div class="row">
-            <div class="text-center pt-5">
-                <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" class="usk-login-register" alt="">
-            </div>
-
-            <div class="wrapper mt-4">
-                <form class="form-right" method="POST" action="">
-                    <h2 class="text-uppercase">USK Agent Registration</h2>
-                    <div class="row text-left">
-                        {% csrf_token %}
-                        {% for field in user_form %}
-                        <div class="col-sm-6 mb-3">
-                            <div class="form-group">
-                                {{ field|as_crispy_field }}
-                            </div>
-                        </div>
-                        {% endfor %}
-                    </div>
-
-                    <div class="mb-4">
-                        <label for="termsCheck" class="form-check-label d-flex align-items-center">
-                            <input type="checkbox" name="terms" id="termsCheck" required class="me-2">
-                            I agree to the <a href="{% url 'web:termsConditions' %}" target="_blank">Terms and Conditions</a>
-                    </div>
-
-                    <div class="form-field text-center">
-                        <button type="submit" id="submitBtn" class="btn btn-primary" name="register"
-                            disabled>Submit</button>
-                    </div>
-
-                    <p class="mt-2"><a href="{% url 'auth_login' %}">Already have an account? Login</a></p>
-                </form>
-            </div>
-
-        </div>
+<form class="" method="POST" action="">
+    <h2 class="text-uppercase">USK Agent Registration</h2>
+    <div class="row text-left">
+        {% csrf_token %}
+        {{user_form|crispy}}
     </div>
 
-    <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
-    <script src="{% static 'web/vendors/chart.js/Chart.min.js' %}"></script>
-    <script src="{% static 'web/js/jquery.cookie.js' %}" type="text/javascript"></script>
-    <script src="{% static 'web/js/off-canvas.js' %}"></script>
-    <script src="{% static 'web/js/hoverable-collapse.js' %}"></script>
-    <script src="{% static 'web/js/owl.carousel.min.js' %}"></script>
+    <div class="mb-4">
+        <label for="termsCheck" class="form-check-label d-flex align-items-center">
+            <input type="checkbox" name="terms" id="termsCheck" required class="me-2">
+            I agree to the <a href="{% url 'web:termsConditions' %}" target="_blank">Terms and Conditions</a>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'web/js/main.js' %}"></script>
+    <div class="form-field text-center">
+        <button type="submit" id="submitBtn" class="btn btn-primary" name="register" disabled>Submit</button>
+    </div>
 
-    <script>
-        // if termsCheck is checked, enable submitBtn else disable submitBtn
-        $('#termsCheck').change(function () {
-            if ($(this).is(':checked')) {
-                $('#submitBtn').prop("disabled", false);
-            } else {
-                $('#submitBtn').prop("disabled", true);
-            }
-        });
-    </script>
+    <p class="mt-2"><a href="{% url 'auth_login' %}">Already have an account? Login</a></p>
+</form>
 
-</body>
+{% endblock %}
 
-</html>
+{% block js %}
+<script>
+    // if termsCheck is checked, enable submitBtn else disable submitBtn
+    $('#termsCheck').change(function () {
+        if ($(this).is(':checked')) {
+            $('#submitBtn').prop("disabled", false);
+        } else {
+            $('#submitBtn').prop("disabled", true);
+        }
+    });
+</script>
+{% endblock %}
