--- a/templates/web/start.html
+++ b/templates/web/start.html
@@ -1,31 +1,26 @@
-{% extends 'registration/base.html' %}
+{% extends 'registration/registration_base.html' %}
 {% load static crispy_forms_tags %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-6 mx-auto">
-        <div class="wrapper py-5">
 
-            <form class="form-right" method="POST" action="">
-                <h2 class="text-uppercase">Lets get started</h2>
-                <div class="row text-left">
-                    {% csrf_token %}
-                    <div class="col-sm-12 mb-3">
-                        <div class="form-group">
-                            <label> Enter your mobile number</label>
-                            <input type="number" name="mobile" class="form-control" />
-                        </div>
-                    </div>
-                </div>
 
-                <div class="form-field text-center">
-                    <button type="submit" id="submitBtn" class="btn btn-primary" name="register">Continue</button>
-                </div>
-            </form>
+<form class="" method="POST" action="">
+    <h2 class="text-uppercase">Lets get started</h2>
+    <div class="row text-left">
+        {% csrf_token %}
+        <div class="col-sm-12 mb-3">
+            <div class="form-group">
+                <label> Enter your mobile number</label>
+                <input type="number" name="mobile" class="form-control" />
+            </div>
         </div>
-
     </div>
-</div>
+
+    <div class="form-field text-center">
+        <button type="submit" id="submitBtn" class="btn btn-primary" name="register">Continue</button>
+    </div>
+</form>
+
 {% endblock %}
 
 {% block js %}
