--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,10 +19,16 @@
             </p>
         </div>
 
-        <a href="#" target="_blank" class="learnmore-button">
+        <a href="https://upabokthasevanakendram.com/" target="_blank" rel="noopener noreferrer" class="learnmore-button">
             LEARN MORE
+        </a>
+        <a href="https://ml.upabokthasevanakendram.com/" target="_blank" rel="noopener noreferrer" class="learnmore-button-malayalam">
+            കൂടുതലറിയുക
         </a>
     </div>
 </form>
+
+<a href="https://wa.me/919895676161" class="whats-link">
+    <img src="{% static 'web/images/whatsapp.png' %}" class="whatsapp-icon"> </a>
 
 {% endblock %}
