--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -16,7 +16,7 @@
       <div class="row">
 
         {% for each_service_head in service_head %}
-        <div class="col-lg-2 col-md-2 col-sm-6 col-6 pb-4 ">
+        <div class="col-lg-2 col-md-2 col-sm-6 col-6 pb-1 ">
           <div class="service-main-head-index text-center bg-gradient-danger">
             <a href="{% url 'services:service' each_service_head.slug %}"
               class="serviec-main-head-a">{{each_service_head.title}}</a>
@@ -40,7 +40,7 @@
     </section>
 
     <!--news scrolling  -->
-    <section class="py-2">
+    <section class="pt-2">
       <div class="alert alert-info">
         <span class="text1">
 
@@ -73,75 +73,89 @@
       </div>
     </div>
 
-    <!-- new services -->
-    <section class="py-5">
-      <h6 class="pb-4 service-heading">NEW SERVICES</h6>
-      <div class="container">
 
-        <div class="row">
+    
+    <section>
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <h6 class="pb-2 service-heading">NEWLY ADDED SERVICES</h6>
+          <div class="container">
+            <div class="row">
+              {% for posters in new_service_poster %}
+              <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                <div class="container__img-holder">
+                  <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
 
-          {% for posters in new_service_poster %}
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6">
-            <div class="container__img-holder">
-              <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
-
-              <div class="text-center mt-3">
-                <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
-                  data-source="{{posters.id | apnumber }}">Click to Download</button>
+                  <div class="text-center mt-3">
+                    <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
+                      data-source="{{posters.id | apnumber }}">Click to Download</button>
+                  </div>
+                  <div class="detail-button">
+                    <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
+                  </div>
+                  <span>{{posters.title}}</span>
+                </div>
               </div>
-              <div class="detail-button">
-                <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
+              {% endfor %}
+              <div class="row">
+                <div class="col-lg-12 col-12">
+                  <a href="{% url 'web:newly_added_services' %}" class="poster-view-more">
+                    View More
+                  </a>
+                </div>
               </div>
-              <span>{{posters.title}}</span>
+              <div class="img-popup">
+                <div class="container" id="resultContainer" style="display: none;">
+
+                  <img class="img-responsive popup-imagea" id="result" src="">
+                  <div class="text-center mt-3 poster-download-button">
+                    <a id="download" class="btn-sm mx-auto btn btn-primary" download>Download</a>
+                  </div>
+                </div>
+                <div class="close-btn">
+                  <div class="bar"></div>
+                  <div class="bar"></div>
+                </div>
+              </div>
             </div>
           </div>
-          {% endfor %}
-          <div class="img-popup">
-            <div class="container" id="resultContainer" style="display: none;">
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <h6 class="pb-2 service-heading">IMPORTANT</h6>
+          <div class="container">
+            <div class="row">
+              {% for posters in important_poster %}
+              <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                <div class="container__img-holder">
+                  <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
 
-              <img class="img-responsive popup-imagea" id="result" src="">
-              <div class="text-center mt-3 poster-download-button">
-                <a id="download" class="btn-sm mx-auto btn btn-primary" download>Download</a>
+                  <div class="text-center mt-3">
+                    <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
+                      data-source="{{posters.id | apnumber }}">Click to Download</button>
+                  </div>
+                  <div class="detail-button">
+                    <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
+                  </div>
+                  <span>{{posters.title}}</span>
+                </div>
               </div>
-            </div>
-            <div class="close-btn">
-              <div class="bar"></div>
-              <div class="bar"></div>
+              {% endfor %}
+              <div class="row">
+                <div class="col-lg-12 col-12">
+                  <a href="{% url 'web:add_on_services' %}" class="poster-view-more">
+                    View More
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
     </section>
 
-    <!-- importants -->
-    <section class="pt-3">
-      <h6 class="pb-4 service-heading">IMPORTANT</h6>
-      <div class="container">
 
-        <div class="row">
-          {% for posters in important_poster %}
 
-          <div class="col-lg-3 col-md-4 col-sm-6 col-6">
-            <div class="container__img-holder">
-              <img src="{{posters.image.url}}" data-id="{{posters.id | apnumber }}" alt="Image">
 
-              <div class="text-center mt-3">
-                <button class="btn-sm mx-auto btn btn-primary" target="_blank" rel="noopener noreferrer"
-                  data-source="{{posters.id | apnumber }}">Click to Download</button>
-              </div>
-              <div class="detail-button">
-                <a href="{{posters.detail_link}}" style=" color: #fff;">Details</a>
-              </div>
-              <span>{{posters.title}}</span>
-            </div>
-          </div>
-
-          {% endfor %}
-
-        </div>
-      </div>
-    </section>
   </div>
   <!-- content-wrapper ends -->
 
