--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -22,7 +22,11 @@
                 <div class="tm_invoice_in">
                     <div class="tm_invoice_head tm_top_head tm_mb15 tm_align_center">
                         <div class="tm_invoice_left">
-                            <div class="tm_logo"><img src="{{request.user.profile_image.crop.105x80}}" alt="Logo"></div>
+                            {% if request.user.profile_image %}
+                            <div class="tm_logo"><img src="{{request.user.profile_image.crop.100x80}}" alt="Logo"></div>
+                            {% else %}
+                            <img class="rounded-circle mt-5" width="100px" src="{% static 'web/images/deafult-01.jpg' %}">
+                            {% endif %}
                         </div>
                         <div class="tm_invoice_right tm_text_right tm_mobile_hide">
                             <div class="tm_f50 tm_text_uppercase tm_white_color">{{invoice.invoice_no}}</div>
