--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -142,7 +142,7 @@
               {% endfor %}
               <div class="row">
                 <div class="col-lg-12 col-12">
-                  <a href="{% url 'web:add_on_services' %}" class="poster-view-more">
+                  <a href="{% url 'web:important_services' %}" class="poster-view-more">
                     View More
                   </a>
                 </div>
