--- a/templates/web/service-head.html
+++ b/templates/web/service-head.html
@@ -14,7 +14,7 @@
 
         {% for each_service_head in service_head %}
         <div class="col-lg-3 col-md-2 col-sm-4 col-4 pb-4 ">
-          <div class="service-main-head text-center bg-gradient-danger">
+          <div class="service-main-head text-center bg-gradient-danger" >
             <a href="{% url 'services:service' each_service_head.slug %}" class="serviec-main-head-a">{{each_service_head.title}}</a>
           </div>
         </div>
@@ -29,8 +29,8 @@
           <div class="row pt-3">  
             {% for service in services %} 
             {% if service.service_head == service_heads %}
-            <div class="col-lg-2 col-md-3 col-sm-6 col-6 pb-3">
-              <div class="serviceBox">
+            <div class="col-lg-2 col-md-3 col-sm-6 col-6 pb-3 serviceSee">
+              <div class="serviceBox " >
                   <img src="{{service.image.crop.179x179}}" class="sub-service-img pb-2" alt="">
                   <h3 class="title">{{service.title}}</h3>
                 <div>
@@ -39,8 +39,11 @@
                 </div>
               </div>
             </div>
+            
             {% endif %}
+            
            {% endfor %}
+           <a href="" class="load-more">Load More</a>
           </div>
         </div>
         {% endfor %}
@@ -49,5 +52,29 @@
     </section>
   </div>
 </div>
+<style>
+  .serviceSee{
+    display: none;
+  }
+</style>
 
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+  $(function () {
+      $(".serviceSee").slice(0, 6).show();
+      $("body").on('click touchstart', '.load-more', function (e) {
+          e.preventDefault();
+          $(".serviceSee:hidden").slice().slideDown();
+          if ($(".serviceSee:hidden").length == 0) {
+              $(".load-more").css('visibility', 'hidden');
+          }
+          $('html,body').animate({
+              scrollTop: $(this).offset().top
+          }, 1000);
+      });
+  });
+</script>
 {% endblock %}
+
