--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1,14 +1,118 @@
 {% extends 'web/base.html' %}
+
 {% load static humanize %}
 
 {% block content %}
 
+
 {% csrf_token %}
 
 
-<div class="main-panel " id="demo">
-  <div class="content-wrapper" id="demo2">
 
+<style>
+  .popup a {
+    text-decoration: none;
+  }
+
+  .popup-onload {
+    width: 100%;
+    margin: 0 auto;
+    position: fixed;
+    z-index: 100;
+    background: #01010ebf;
+    height: 100vh;
+  }
+
+  .popup {
+    min-width: 400px;
+    width: 40%;
+    min-height: 150px;
+    margin: 40px 415px;
+    background: #fff;
+    opacity: 0.9;
+    position: relative;
+    z-index: 10;
+    padding: 15px 35px;
+    /* box-shadow: 0 2px 5px #000; */
+    border-radius: 29px;
+  }
+
+  .popup p {
+    color: #fff;
+    /* text-align: justify; */
+    font-size: 1.25rem;
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: "Nunito Sans", sans-serif;
+  }
+
+  .popup p a {
+    color: #b18d73;
+    font-weight: 400;
+  }
+
+  .x {
+    color: #b18d73;
+    font-size: 2rem;
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: "Nunito Sans", sans-serif;
+    text-decoration: none;
+    position: absolute;
+    right: 15px;
+    top: 0;
+  }
+
+  .x:hover {
+    cursor: pointer;
+  }
+
+  .popup-wrapper {
+    width: 100vw;
+    height: 100vh;
+    background-color: #efefef;
+
+    color: #b18d73;
+    font-size: 2rem;
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: "Nunito Sans", sans-serif;
+    text-align: center;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  .onload-image {
+    width: 100%;
+    height: auto;
+  }
+</style>
+
+ 
+<body>
+  <div class='popup-onload'>
+    <div class='popup'>
+      <a href='' class="x">x</a>
+      {% for onload_popup in on_load_popup|slice:":1" %}
+      <div style="height: auto;width: 400px;" class="mx-auto">
+        <img src="{{onload_popup.image.url}}" class="onload-image">
+      </div>
+      <div class="text-center py-3">
+        <span class="modal-desc">
+          {{onload_popup.title}}
+        </span>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</body>
+
+<div class="main-panel " id="demo">
+
+  <div class="content-wrapper" id="demo2">
 
 
     <!-- service head display -->
@@ -74,7 +178,7 @@
     </div>
 
 
-    
+
     <section>
       <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12 col-12">
@@ -142,7 +246,7 @@
               {% endfor %}
               <div class="row">
                 <div class="col-lg-12 col-12">
-                  <a href="{% url 'web:important_services' %}" class="poster-view-more">
+                  <a href="{% url 'web:add_on_services' %}" class="poster-view-more">
                     View More
                   </a>
                 </div>
@@ -160,6 +264,7 @@
   <!-- content-wrapper ends -->
 
 </div>
+
 
 {% endblock %}
 
@@ -247,6 +352,29 @@
           "https://static.addtoany.com/menu/sm.23.html#type=core&event=load", n.top = "0", n.visibility = "hidden", c.insertBefore(t, null), t.insertBefore(e, null))
       }, "loading" !== r.readyState ? m() : (r.addEventListener("readystatechange", m), r.addEventListener("DOMContentLoaded", m))))
   }(document, window);
+</script>
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+  integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>$(function () {
+    $(".popup-onload").show();
+    $(".close").click(function () {
+      $(".popup-onload").hide();
+      return false;
+    });
+    $(".x").click(function () {
+      $(".popup-onload").hide();
+      return false;
+    });
+    $(".popup-wrapper").click(function () {
+      $(".popup-onload").hide();
+      return false;
+    });
+  });
 </script>
 
 
