--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -96,6 +96,37 @@
                                     </a>
                                 </div>
                             </div>
+                            {% if upgraded %}
+                            <div class="col-lg-12 col-md-12 col-sm-6 col-6">
+                                <div class="d-flex justify-content-between align-items-center experience">
+                                    <a href="{% url 'web:call_support' %}">
+                                        <button class="certificate" id="chatBtn"><i class="fa-solid fa-lock"></i> Call</button>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12 col-sm-6 col-6">
+                                <div class="d-flex justify-content-between align-items-center experience">
+                                    <a href="{% url 'web:whatsapp_support' %}">
+                                        <button class="certificate" id="chatBtn"><i class="fa-solid fa-lock"></i> Whatsapp</button>
+                                    </a>
+                                </div>
+                            </div>
+                            {% else %}
+                            <div class="col-lg-12 col-md-12 col-sm-6 col-6">
+                                <div class="d-flex justify-content-between align-items-center experience">
+                                    <a href="{% url 'web:upgrade_plan_request' %}">
+                                        <button class="certificate" id="chatBtn"><i class="fa-solid fa-lock"></i> Call</button>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12 col-sm-6 col-6">
+                                <div class="d-flex justify-content-between align-items-center experience">
+                                    <a href="{% url 'web:upgrade_plan_request' %}">
+                                        <button class="certificate" id="chatBtn"><i class="fa-solid fa-lock"></i> Whatsapp</button>
+                                    </a>
+                                </div>
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
