--- a/templates/web/upgrade-request.html
+++ b/templates/web/upgrade-request.html
@@ -1,6 +1,7 @@
 {% extends 'web/base.html' %}
 {% load static %}
-% block css_plugins %<style>
+{% block css_plugins %}
+<style>
     body {
         --primary: 25, 91, 255;
         --color: 44, 62, 80;
