--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -105,7 +105,11 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <div class="branding_image_uploading ">
-                    {% if uploaded_branding_image.image %}
+                    {% if uploaded_branding_image.is_verified == True %}
+                    <h3>Image Verified By Admin</h3>
+                    <img src="{{uploaded_branding_image.image.url}}" style="width: 100%;" class="responsive-size">
+                    {% elif uploaded_branding_image.is_verified == False %}
+                    <h3>Image not Verified By Admin</h3>
                     <img src="{{uploaded_branding_image.image.url}}" style="width: 100%;" class="responsive-size">
                     {% else %}
                     <h5 style="text-align: center;color: rgb(77, 3, 3);padding: 40px 0px;">Upload Your Branding Image</h5>
@@ -113,8 +117,7 @@
                 </div>
             </div>
 
-            <form action="" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
+
                 <div class="col-lg-12">
                     <div class="row">
                         {% if uploaded_branding_image.image %}
@@ -130,6 +133,8 @@
                         </div>
 
                         {% else %}
+                        <form action="" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 tooltip">
                             <span class="tooltiptext">To download a poster with branding of your organization, upload an image size of (222 PX * 1080 PX ) <br>
                                 നിങ്ങളുചട സ്ഥാപനത്തിന്ചറ ത് ാൻേിംഗ് ഉള്ള ഒരു ഡപാസ്റ്റർ േൗൺഡലാഡ് ചെയ്യാൻ,
