--- a/templates/web/documents.html
+++ b/templates/web/documents.html
@@ -10,8 +10,11 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 col-6 form-dodument-card-margin" >
                     <div class="file-upload-box">
                         <a href="">
+                            <div class="text-center ">
+                                <span class="form-name">{{docs.title}}</span>
+                            </div>
                             <div>
-                                <h6 class="text-center form-name pt-3">{{docs.name}}</h6>
+                                <h6 class="text-center form-name pt-1">{{docs.name}}</h6>
                             </div>
                             <div class="py-1 text-center">
                                 <img src="{{docs.image.crop.100x100}}" class="form-image">
