--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,13 +22,13 @@
         <a href="https://upabokthasevanakendram.com/" target="_blank" rel="noopener noreferrer" class="learnmore-button">
             LEARN MORE
         </a>
-        <a href="https://ml.upabokthasevanakendram.com/" target="_blank" rel="noopener noreferrer" class="learnmore-button-malayalam">
+        <!-- <a href="https://ml.upabokthasevanakendram.com/" target="_blank" rel="noopener noreferrer" class="learnmore-button-malayalam">
             കൂടുതലറിയുക
-        </a>
+        </a> -->
     </div>
 </form>
 
-<a href="https://wa.me/919895676161" class="whats-link">
+<a href="https://api.whatsapp.com/send/?phone=917306502050&text=Hi%0AUSK+Login&type=phone_number&app_absent=0" class="whats-link">
     <img src="{% static 'web/images/whatsapp.png' %}" class="whatsapp-icon"> </a>
 
 {% endblock %}
